--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>nms/MME-NMS-v1_12_R1</module>
         <module>nms/MME-NMS-v1_13_R2</module>
         <module>nms/MME-NMS-v1_14_R1</module>
+        <module>nms/MME-NMS-v1_15_R1</module>
         <module>nms/MME-NMS-v1_16_R1</module>
         <module>nms/MME-NMS-v1_16_R2</module>
         <module>nms/MME-NMS-v1_16_R3</module>
