--- a/build.gradle
+++ b/build.gradle
@@ -38,79 +38,17 @@ dependencies {
     compileOnly  ("me.clip:placeholderapi:+")
 }
 
-processResources {
-    duplicatesStrategy = 'include'
-    print("Process properties....")
-    Properties p1=new Properties()
-    File pf1=new File("$project.projectDir/gradle.properties")
-    if(pf1.exists())
-    {
-        p1.load(pf1.newDataInputStream())
-        project.version = p1.artver
-        project.group = p1.group
-        println("Done!")
-    }
-    else
-    {
-        println("Warning! gradle.properties file is missing!")
-    }
-    
-    print("Process resources....")
-    inputs.property "version", project.version
-    from (sourceSets.main.resources.srcDirs) {
-            include "plugin.yml"
-            expand "version": project.version
-    }
-
-    from (sourceSets.main.resources.srcDirs) {
-            exclude "plugin.yml"
-    }
-    println("Done!")
-}
-
 compileJava {
     dependsOn clean
-    
+
     doLast {
         print("Create POM file....")
-	subprojects {
-	  group = 'com.mythicmobsextension'
-	  task generatePom << { pom { }.writeTo("./build/libs/"+project.name+"-"+project.version+".xml")
-        println("Done!")}}
+        subprojects {
+            group = 'com.mythicmobsextension'
+            task generatePom << {
+                pom {}.writeTo("./build/libs/" + project.name + "-" + project.version + ".xml")
+                println("Done!")
+            }
+        }
     }
-    
 }
-
-##uploadArchives {
-##    doLast {
-##        print("Update repository files....")
-##	def d1=project.projectDir
-##	Properties archiva=new Properties()
-##        
-##        File data=new File("${d1}/../usr.properties")
-##	if(data.exists())
-##        {
-##            archiva.load(data.newDataInputStream())
-##            def usr=archiva.getProperty('usr')
-##            def pwd=archiva.getProperty('pwd')
-
-
-##            repositories.mavenDeployer {
-##                    repository(url:'http://mc.hackerzlair.org:8888/repository/public/') {
-##                            authentication (userName: '${usr}', password: '${pwd}')
-##                    }
-##
-##                    pom.version=project.version
-##                    pom.artifactId=project.name
-##                    pom.groupId='com.gmail.berndivader'
-##            }
-##            println("Done!")
-##        }
-##        else
-##        {
-##            println("Archiva config file is missing. Repository not updated!")
-##        }
-##    }
-
-##}
-
