--- a/build.gradle
+++ b/build.gradle
@@ -11,16 +11,16 @@ repositories {
         url = "http://repo.extendedclip.com/content/repositories/placeholderapi/"
         allowInsecureProtocol = true
     }
- }
- 
+}
+
 dependencies {
     compileOnly  ("org.spigotmc:spigot-1.16.5:+")
     compileOnly  ("org.spigotmc:spigot-1.16.3R:+")
     compileOnly  ("org.spigotmc:spigot-1.16.1R:+")
-    compileOnly  ("org.spigotmc:spigot-1.15.2:+") 
-    compileOnly  ("org.spigotmc:spigot-1.14.4:+") 
-    compileOnly  ("org.spigotmc:spigot-1.13.2:+") 
-    compileOnly  ("org.spigotmc:spigot-1.12.2:+") 
+    compileOnly  ("org.spigotmc:spigot-1.15.2:+")
+    compileOnly  ("org.spigotmc:spigot-1.14.4:+")
+    compileOnly  ("org.spigotmc:spigot-1.13.2:+")
+    compileOnly  ("org.spigotmc:spigot-1.12.2:+")
     compileOnly  ("com.massivecraft:massivecore:+")
     compileOnly  ("com.massivecraft:factions:+")
     compileOnly  ("com.gmail.filoghost:holographicdisplays:+")
@@ -38,6 +38,36 @@ dependencies {
     compileOnly  ("me.clip:placeholderapi:+")
 }
 
+processResources {
+    duplicatesStrategy = 'include'
+    print("Process properties....")
+    Properties p1=new Properties()
+    File pf1=new File("$project.projectDir/gradle.properties")
+    if(pf1.exists())
+    {
+        p1.load(pf1.newDataInputStream())
+        project.version = p1.artver
+        project.group = p1.group
+        println("Done!")
+    }
+    else
+    {
+        println("Warning! gradle.properties file is missing!")
+    }
+
+    print("Process resources....")
+    inputs.property "version", project.version
+    from (sourceSets.main.resources.srcDirs) {
+        include "plugin.yml"
+        expand "version": project.version
+    }
+
+    from (sourceSets.main.resources.srcDirs) {
+        exclude "plugin.yml"
+    }
+    println("Done!")
+}
+
 compileJava {
     dependsOn clean
 
@@ -45,10 +75,8 @@ compileJava {
         print("Create POM file....")
         subprojects {
             group = 'com.mythicmobsextension'
-            task generatePom << {
-                pom {}.writeTo("./build/libs/" + project.name + "-" + project.version + ".xml")
-                println("Done!")
-            }
-        }
+            task generatePom << { pom { }.writeTo("./build/libs/"+project.name+"-"+project.version+".xml")
+                println("Done!")}}
     }
+
 }
